Fix header spacing

--- a/themes/stepmania/src/style.scss
+++ b/themes/stepmania/src/style.scss
@@ -89,6 +89,9 @@ header {
 			margin-bottom: 0;
 		}
 		header {
+			p, h1 {
+				padding: 0;
+			}
 			color: #333;
 			background: none;
 			box-shadow: none;
